Generate paths from Q to A